style: s: alignment fix + nav active style

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -42,8 +42,18 @@
     .nav-main > ul > li {
         display: flex;
         flex-direction: row;
+        align-items: center;
         padding: 4px 8px;
         padding-left: 16px;
+    }
+
+    /* active nav element */
+    .nav-main .nav-active {
+        border-left: 3px solid var(--color-accent);
+    }
+    .nav-main .nav-active p {
+        color: var(--color-neutral-white);
+
     }
 
 }
